# Efficient-Disentangled-Graph-Recommender

./: .gitignore  .prettierrc  LICENCE  README.md  main.py  pyproject.toml
.agents/skills/causal-inference/: SKILL.md  causally-informed_pipeline.md  discovery_algorithms.md  temporal_causal_analysis.md
.agents/skills/cuvs/: cluster_kmeans.md  nn_cagra.md
.agents/skills/edgrec-implementation/: SKILL.md  edgrec-architecture.md  edgrec-config.md  edgrec-data-pipeline.md  edgrec-literature.md  edgrec-losses.md  edgrec-result-analysis.md  edgrec-training.md  edgrec_full.md
.agents/skills/existing-work/: SKILL.md  datasets_information.md  full_summary.md
.agents/skills/graph-neural-networks/: SKILL.md  applying-scalable-gnn-training.md  benchmarking-and-performance-tuning.md  debugging-and-visualizing-gnns.md  efficient-sparse-matrix-operations-gnns.md  gcn.md  gpu-acceleration-and-memory-management.md  hands-on-optimizing-gnn-implementation.md  knowledge-graph-embeddings-with-gnns.md  modeling-dynamic-and-temporal-graphs.md  optimization-strategies-gnns.md  pytorch-geometric-advanced-features.md
.agents/skills/memory-optimizations/: SKILL.md  efficient_runtime_ml.md  torch_amp.md
.agents/skills/mlflow/: SKILL.md  mlflow-pytorch.md
.agents/skills/numba/: SKILL.md  compiling_python_classes.md  introduction.md  numpy_universal_functions.md
.agents/skills/optuna/: SKILL.md  ask-and-tell-interface.md  callback-for-study.optimize.md  cli.md  early-stopping-independent-evaluations-by-wilcoxon-pruner.md  easy-parallelization.md  efficient-optimization-algorithms.md  multi-objective-optimization.md  pythonic-search-space.md  quick-visualization-for-hyperparameter-optimization-analysis.md  reuse-best-trial.md  saving-resuming-study-with-rdb-backend.md  specify-hyperparameters-manually.md  user-defined-pruner.md  user-defined-sampler.md
.agents/skills/project-structure/: project-structure.md
.agents/skills/python-patterns/: SKILL.md  ascii-performance.md  builder-alternative.md  flyweight-prototype.md  if-else-replacement.md  pattern-catalog.md  polymorphism-and-strategy.md  singleton-alternative.md
.agents/skills/pytorch/: SKILL.md  cuda_environment_variables.md  lr_schedulers.md  performance_tuning_guide.md  pytorch_jit.md  sparse.md  torch_nn.md  (+1 more)
.agents/skills/pytorch-geometric/: compiled_gnns.md  cpu_affinity_for_pyg_workcloads.md  data.md  datasets.md  managing_experiments_with_graphgym.md  memory_efficient_aggregations.md  models.lightgcn.md  nn.md  sampler.md  scaling_up_gnns_via_remote_backends.md  torchscript_support.md  transforms.md  utils.md
.codex/: AGENTS.md  hooks.json
.github/: copilot-instructions.md
data/: datasets_information.md
docs/existing_implementations/: CaDSI_audit.md  CausE_audit.md  DICE_audit.md  DirectAU_audit.md  FMMRec_audit.md  LayerGCN_audit.md  LightGCNpp_audit.md  MCLN_audit.md  MGCE_audit.md  PropCare_audit.md  SIGformer_audit.md
docs/usage/: experiments.md  scripts.md
experiments/: __init__.py  ablation_configs.py  benchmark_resolvers.py  cli_parsers.py  experiment_catalog.json  recipes.py  run_ablation.py  run_benchmark.py  run_experiment.py  run_search.py  search_spaces.json
results/: optuna_optimization.md  query_results.md
scripts/: __init__.py  _workflow_helpers.py  audit_metrics.py  cleanup_experiment_artifacts.py  download_pyg_datasets.py  evaluate_scoring_modes.py  export_optuna_figures.py  feature_policy_probes.py  list_commands.py  preflight_experiments.py  prune_checkpoints.py  query_results.py  quick_validate.py  report_optuna_optimization.py  reset_experiment_db.py  verify_pipeline.py  verify_setup.py  verify_sqlite.py  visualize_results.py
src/: __init__.py
src/data/: __init__.py  canonical.py  feature_groups.py  feature_policy.py  graph_builder.py  interaction_masks.py  negative_sampler.py  subgraph_sampler.py
src/data_exploration/: data_exploration.ipynb  data_exploration.py  data_information.py  explore_all_datasets.py
src/evaluation/: __init__.py
src/losses/: __init__.py  bpr.py  contrastive.py  counterfactual.py  loss_suite.py  orthogonality.py  popularity.py
src/models/: __init__.py  common.py  edgrec.py  embeddings.py  lightgcn.py  propensity.py  scoring.py  ucagnn.py
src/profiling/: __init__.py  gpu_profiler.py
src/reporting/: __init__.py  feature_analysis.py
src/training/: __init__.py  cached_trainer.py  evaluator.py  mini_batch_trainer.py  trainer.py
src/utils/: __init__.py  benchmark_datasets.py  cli_parsers.py  config.py  crru.py  crru_popularity.py  csv_features.py  dataset_loader_utils.py  experiment_logger.py  experiment_naming.py  interaction_indexing.py  method_naming.py  project_paths.py  reproducibility.py  trainer_runtime.py
tests/: test_cli_parsers.py  test_crru.py  test_data_and_reproducibility.py  test_experiment_logger.py  test_feature_group_drops.py  test_feature_importance_reporting.py  test_feature_metadata.py  test_feature_subset_search.py  test_formal_training_policy.py  test_prune_checkpoints.py  test_search_experiments.py  test_split_safety.py
tests/sqlite_queries/: failure_reasons.sql
(+59 files in other folders)
