[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-embeddings-for-recommendations"
version = "0.3.2"
description = "GPU-Efficient Causal Disentanglement: A Unified Embedding Pipeline with ANN-Accelerated Graph Construction and Memory-Aware Optimization"
readme = "README.md"
# PyG only supports Python 3.10–3.13, so constrain the interpreter accordingly.
requires-python = ">=3.13,<3.14"

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.7.0",
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "requests>=2.32.0",
    "aiohttp>=3.13.0",
    "jinja2>=3.1.6",
    "tqdm>=4.67.0",
    "psutil>=7.2.0",
    "pyparsing>=3.0.0",
    "yarl>=1.7.0",
    "tomli>=2.4.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.15.4",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "h5py>=3.15.1",
    "sentence-transformers>=5.2.3",
    "ray>=2.54.0",
    "cudf-polars-cu13>=26.2.1",
    "ipykernel>=7.2.0",
    "mlflow>=3.10.1",
    "torchmetrics>=1.9.0",
    "cupy>=14.0.1",
    "numba-cuda>=0.30.1",
    "numba>=0.65.1",
    "optuna>=4.9.0",
    "optuna-dashboard>=0.20.0",
    "exa-py>=2.13.2",
    "cuvs-cu13>=26.2.0",
    "plotly>=6.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu131"

[project.scripts]
formal-run = "experiments.run_benchmark:formal_main"
experiment = "experiments.run_experiment:main"
ablation = "experiments.run_ablation:main"
search-experiments = "experiments.run_search:main"
quick-validate = "scripts.quick_validate:main"
download-datasets = "scripts.download_pyg_datasets:main"
cleanup-experiment-artifacts = "scripts.cleanup_experiment_artifacts:main"
prune-checkpoints = "scripts.prune_checkpoints:main"
query-results = "scripts.query_results:main"
report-optuna-optimization = "scripts.report_optuna_optimization:main"
export-optuna-figures = "scripts.export_optuna_figures:main"
reset-experiment-db = "scripts.reset_experiment_db:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["experiments*", "scripts*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
# Align with project requires-python = ">=3.13"
target-version = "py313"
line-length = 100
src = ["src", "experiments", "scripts"]
exclude = ["external", "data"]
# FIXED: Moved from [tool.ruff.lint] to [tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "RUF",  # Ruff-specific rules
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"src/data_exploration/data_exploration.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
